deploy_app/deployment-bot.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: crawler-bot
  labels:
    app: crawler
    component: bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: bot
  template:
    metadata:
      name: crawler-bot
      labels:
        app: crawler
        component: bot
    spec:
      containers:
      - image: mad72/crawler-bot1:latest
        name: bot
