deploy_app/deployment-mongodb.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: crawler
    component: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: mongodb
  template:
    metadata:
      name: mongodb
      labels:
        app: crawler
        component: mongodb
    spec:
      containers:
      - image: mongo:3.2
        name: mongodb
