deploy_app/deployment-rabbitmq-exporter.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: rabbitmq-exporter
  labels:
    app: crawler
    component: rabbitmq-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: rabbitmq-exporter
  template:
    metadata:
      name: rabbitmq-exporter
      labels:
        app: crawler
        component: rabbitmq-exporter
    spec:
      containers:
      - image: kbudde/rabbitmq-exporter
        name: rabbitmq-exporter
