deploy_app/deployment-ui.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: crawler-ui
  labels:
    app: crawler
    component: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: ui
  template:
    metadata:
      name: crawler-ui
      labels:
        app: crawler
        component: ui
    spec:
      containers:
      - image: mad72/crawler-ui:latest
        name: ui
