deploy_app/service-bot.yml
apiVersion: v1
kind: Service
metadata:
  name: bot
  labels:
    app: crawler
    component: bot
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: crawler
    component: bot
