deploy_app/service-mongodb-exporter.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-exporter
  labels:
    app: crawler
    component: mongodb-exporter
spec:
  ports:
  - port: 9216
    protocol: TCP
    targetPort: 9216
  selector:
    app: crawler
    component: mongodb-exporter
