deploy_app/service-mongodb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    component: mongodb
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    component: mongodb
