deploy_app/service-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    app: crawler-bot
    component: ui
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: crawler-bot
    component: ui
